[package]
name = "mesh_sketch_test"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_simple_subsecond_system = "0.2.0"

[feature]
dev_mode = ["bevy/bevy_dev_tools", "other_dev_tools"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
